# backend

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  pyproject.toml  ruff.toml
accounts/: consts.py  models.py
apps/accounts/: apps.py  consts.py  dto.py  exceptions.py  models.py  services.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_remove_user_email_remove_user_first_name_and_more.py
apps/catalogs/: apps.py  consts.py
apps/catalogs/migrations/: 0001_initial.py
apps/catalogs/models/: __init__.py  brand.py  category.py  product.py  specification.py  variant.py
apps/customers/: apps.py  permissions.py  urls.py
apps/customers/dto/: __init__.py  address.py  profile.py
apps/customers/migrations/: 0001_initial.py  0002_alter_customeraddress_user_and_more.py  0003_alter_customeraddress_latitude_and_more.py
apps/customers/models/: __init__.py  address.py  profile.py
apps/customers/services/: __init__.py  address.py  profile.py
apps/customers/views/: __init__.py  address.py  profile.py
apps/offers/: apps.py  consts.py
apps/offers/migrations/: 0001_initial.py
apps/offers/models/: __init__.py  fulfillment.py  offer.py
apps/otp/: apps.py  consts.py  dto.py  exceptions.py  models.py  services.py
apps/otp/migrations/: 0001_initial.py  0002_alter_otp_purpose.py
apps/sellers/: apps.py
apps/sellers/migrations/: 0001_initial.py
apps/sellers/models/: __init__.py  profile.py  store.py  store_address.py
config/: settings.py  urls.py
utils/: models.py
